# scuffedtorio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  highscore.txt  main  main.c  readme.md  scuffedtorio  sdl.supp  todo.txt
src/: game.c  game.h  main.c  structs.h
src/logic/: camera.c  camera.h  entity.c  entity.h  input.c  input.h  inventory_slot.c  inventory_slot.h  linked_list.c  linked_list.h  score.c  score.h  spawner.c  spawner.h  tile.c  tile.h  tiletype.c  tiletype.h  turret.c  turret.h
src/rendering/: camera.c  camera.h  sdl_wrapper.c  sdl_wrapper.h
src/rendering/ui/: button.c  button.h  text.c  text.h
src/tile/: tile.c  tile.h
